tests/cases/compiler-development/artifact/errors/diagnostic-generic-function-pointer-mismatch.diagnostic
diagnostic error code=T0001 family=type message="generic type 'T' inferred as both i64 and bool" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-function-pointer-mismatch.ari" display="tests/cases/generics/errors/generic-function-pointer-mismatch.ari" bytes=145
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-function-pointer-mismatch.ari" line=6 column=29 end_line=6 end_column=37 byte_start=90 byte_end=98 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-function-pointer-mismatch.ari:6:29\n   |\n 6 |   let op: fn(i64) -> bool = identity;\n   |                             ^^^^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/generics/errors/generic-function-pointer-mismatch.ari" line=6 column=14 end_line=6 end_column=17 byte_start=75 byte_end=78 message="first inferred 'T' as i64"
  Snippet label=1 text="  --> tests/cases/generics/errors/generic-function-pointer-mismatch.ari:6:14\n   |\n 6 |   let op: fn(i64) -> bool = identity;\n   |              ^^^"
  Note index=0 location=none message="generic type inference must choose one concrete type for 'T'"
  Help index=0 location=none message="make every use of 'T' agree, or pass explicit type arguments"
